syntax = "proto3";

package model;

option go_package = "github.com/tislib/data-handler/pkg/model";

import 'google/protobuf/timestamp.proto';

message AuditData {
  google.protobuf.Timestamp created_on = 1;
  google.protobuf.Timestamp updated_on = 2;
  string created_by = 3;
  string updated_by = 4;
}