syntax = "proto3";

package model;

option go_package = "github.com/tislib/apibrew/pkg/model";

import 'model/audit.proto';
import 'model/common.proto';
import 'model/annotations.proto';

message Node {
  string id = 1 [(model.hcl_ignore) = true]; // id; read only
  string name = 2;
  string description = 4;
  string url = 5;
  string nodeKey = 6;
  string authenticationToken = 7;

  AuditData auditData = 101;
  uint32 version = 102;
  map<string, string> annotations = 103 [(model.hcl_block) = "annotations"];
  map<string, string> labels = 104 [(model.hcl_block) = "tags"];
}